[tool.poetry]
name = "pico"
version = "0.1.0"
description = ""
authors = ["Liquan Yang <yang.liquan87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
rshell = "^0.0.31"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
